[metadata]
name = kandra 
version = 0.01
summary = stackstorm automation platform product 
description-file =
    README.md
license = Apache License, Version 2.0
home-page = https://stackstorm.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
author = StackStorm dev team 
author-email = info@stackstorm.com 

[files]
packages =
    common 
