[metadata]
name = stactioncontroller
version = 0.0.1
summary = StackStorm Kandra - StactionController
description-file =
    README.md
license = Apache License, Version 2.0
home-page = https://stackstorm.com
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
author = StackStorm development team 
author-email = info@stackstorm.com 

[files]
packages =
   st2actioncontroller
