[metadata]
name = st2client
version = 0.4.0
vendor = StackStorm
summary = Stanley Client Library
description-file = README.md
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = StackStorm
author-email = info@stackstorm.com

[files]
packages =
    st2client

[entry_points]
console_scripts =
    st2 = st2client.shell:main

[nosetests]
cover-package = st2client

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
